fixing tmux copycat..

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,7 @@ bind -n M-e select-window -t 2
 #resize current pane to a useful space.
 bind -n M-r resize-pane -x160 \; display-message "Making pane usable" 
 bind -n M-R resize-pane -x110 
+
 ##bind F13 send-prefix
 #
 ###end
@@ -92,11 +93,8 @@ set-option -g repeat-time 0
 
 set -wg mode-style bg=brightred,fg=yellow,underscore,bold
 ###end
-###start TPM Pluginx
-set -g @tpm_plugins ' \
- tmux-plugins/tpm \
- tmux-plugins/tmux-copycat \
-'
-run-shell '~/.tmux/plugins/tpm/tpm'
 #disallow renaming
 set-option -g allow-rename off
+
+#my search script
+bind -n M-s  send-keys -t.- '~/.tmux/search.sh' Enter
