--- a/.tmux.conf
+++ b/.tmux.conf
@@ -97,4 +97,4 @@ set -wg mode-style bg=brightred,fg=yellow,underscore,bold
 set-option -g allow-rename off
 
 #my search script
-bind -n M-s  send-keys -t.- '~/.tmux/search.sh' Enter
+bind -T prefix /  send-keys -t.- '~/.tmux/search.sh' Enter
