--- a/.tmux.conf
+++ b/.tmux.conf
@@ -97,4 +97,7 @@ set -wg mode-style bg=brightred,fg=yellow,underscore,bold
 set-option -g allow-rename off
 
 #my search script
-bind -T prefix /  send-keys -t.- '~/.tmux/search.sh' Enter
+#bind -n prefix /  send-keys -t.- '~/.tmux/search.sh' Enter
+bind -T prefix / copy-mode \; send-keys  ?
+
+
